more fixes to styling on mobile

--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -70,7 +70,8 @@
     }
 
     .post-container-div {
-        top: 150px;
+        margin: 0;
+        margin-top: 10rem;
     }
 
     .post-title {
